[package]
name = "befunge93-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "befunge93"
path = "src/bin/cli.rs"

[[bin]]
name = "befunge93-gui"
path = "src/bin/gui.rs"

[dependencies]
anyhow = "1.0.88"
eframe = "0.28.1"
egui = "0.28.1"
log = "0.4.22"
rand = "0.8.5"
thiserror = "1.0.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"
web-sys = "0.3.70"
getrandom = { version = "0.2.15", features = ["js"] }

